fix aboutme image alignment and border padding

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -271,7 +271,8 @@ li {
         width: 500px;
         height: auto;
         position: relative;
-        top: 50%;
+        // 48 px used instead of 50 for image alignment
+        top: 48%;
         transform: translateY(-50%);
 
         @include mobile {
@@ -288,7 +289,7 @@ li {
 
     #aboutme-border {
       width: 10px;
-      margin: 10px 10px;
+      margin: 10px 0px;
       background: $aboutme-text;
     }
 
